--- a/Capstone Project Coursera .ipynb
+++ b/Capstone Project Coursera .ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "Hello Capstone Project Course!\n"
      ]
     }
    ],
    "source": [
-    "print('Hello World')"
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "print('Hello Capstone Project Course!')"
    ]
   },
   {
