--- a/Capstone Project Coursera .ipynb
+++ b/Capstone Project Coursera .ipynb
@@ -1,22 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project will be used for the Final Assignment "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Capstone Project Course!\n"
+      "Hello Capstone Project Course\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np \n",
-    "print('Hello Capstone Project Course!')"
+    "print('Hello Capstone Project Course')"
    ]
   },
   {
